--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,48 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,500;1,700&display=swap');
+
+header {
+  position: static;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.topo {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 15px;
+}
+
+.logo {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.logo-cooper {
+  fill: #4AC959;
+  height: 7vh;
+  position: static;
+}
+
+.logo-title {
+  position: relative;
+  font-family: Arial, Helvetica, sans-serif;
+  right: 15vw;
+}
+
+.login-button {
+  background-color: black;
+  /* border-radius: 10px; */
+  height: 4vh;
+  width: 30vw;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 600;
+  font-size: large;
 }
