--- a/src/pages/ToDo/index.css
+++ b/src/pages/ToDo/index.css
@@ -1,6 +1,32 @@
-.todo-title {
-  width: 150px;
-  height: 100px;
-  transform: skew(20deg);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.todo-box {
+  position: relative;
+  width: 100%;
+  height: 150px;
   background: black;
+  transform: skewY(-8deg);
+  top: 700px
+}
+
+.todo-title {
+  color: white;
+  font-family: 'Poppins';
+  font-weight: 600;
+  font-size: 30px;
+  max-width: 50em;
+  transform: skewY(8deg);
+  position: relative;
+  left: 30%;
+  top: 30%
+}
+
+.todo-text {
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-size: 14px;
+  text-align: center;
+  color: white;
+  transform: skewY(8deg);
 }
