--- a/src/pages/ToDo/index.css
+++ b/src/pages/ToDo/index.css
@@ -31,7 +31,7 @@
   transform: skewY(8deg);
 }
 
-.top-border {
+.top-border-todo {
   height: 10px;
   width: 100%;
   background-color: #E88D39;
@@ -50,34 +50,95 @@
   font-weight: 400;
   font-family: 'Montserrat';
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
   display: flex;
   align-items: center;
   justify-items: center;
+  margin-bottom: 10px;
 }
 
 .board-todo-tasks {
+  padding: 1px;
   position: relative;
-  width: 160px;
-  height: 300px;
+  height: auto;
+  min-height: 150px;
+  width: 180px;
+  /* min-width: 160px; */
   top: 750px;
-  left: 20px;
+  left: 7px;
   box-shadow: 0px 4px 12px rgba(66, 66, 66, 0.198454);
 }
 
-.board-todo-task{
+.board-todo-task {
   font-family: 'Montserrat';
   font-weight: 400;
+}
+
+.erase-all-button {
+  background-color: black;
+  border-radius: 4px;
+  position: relative;
+  border: none;
+  color: white;
+  font-family: 'Montserrat';
+  font-weight: 600;
+  width: 100px;
+  height: auto;
+  min-height: 30px;
+  text-align: center;
+  left: 25px;
 }
 
 /* .board-todo-list {
   display: flex;
 } */
 
-/* .board-done-tasks {
+.board-done-tasks {
+  /* display: none; */
+  padding: 1px;
   position: relative;
-  width: 300px;
-  height: 300px;
-  top: 750px;
-  border: 2px solid pink;
-} */
+  height: auto;
+  min-height: 150px;
+  width: 160px;
+  min-width: auto;
+  min-width: 160px;
+  top: 327px;
+  left: 194px;
+  box-shadow: 0px 4px 12px rgba(66, 66, 66, 0.198454);
+}
+
+.top-border-done {
+  height: 10px;
+  width: 100%;
+  background-color: #4AC959;
+  margin-bottom: -20px;
+}
+
+.board-done-title {
+  text-align: center;
+  font-family: 'Poppins';
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: -2px;
+}
+
+.board-done-head {
+  font-weight: 400;
+  font-family: 'Montserrat';
+  text-align: center;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
+.board-how-many-tasks-done-text {
+  font-weight: 700;
+  font-family: 'Montserrat';
+  text-align: center;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  margin-bottom: 10px;
+}
