--- a/src/components/Task/index.css
+++ b/src/components/Task/index.css
@@ -5,6 +5,15 @@
 .board-todo-task {
   display: flex;
   align-items: center;
+  /* background-color: white; */
+  border-radius: 2px;
+}
+
+.board-todo-task-dragging {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border-radius: 2px;
 }
 
 .board-todo-task-text {
@@ -14,4 +23,5 @@
   padding: 3px 1px;
   margin: 2px;
   max-width: 150px;
+  /* background-color: white; */
 }
