--- a/src/pages/ToDo/index.css
+++ b/src/pages/ToDo/index.css
@@ -7,15 +7,16 @@
   height: 150px;
   background: black;
   transform: skewY(-8deg);
-  top: 700px
+  top: 700px;
 }
 
 .wrapper-todo-board {
   display: flex;
   position: relative;
+  flex-grow: 1;
   top: 800px;
-  max-width: 100%;
-  max-height: 90%;
+  /* max-width: 100%; */
+  /* max-height: 90%; */
   align-items: flex-start;
   justify-content: space-around;
 }
@@ -64,7 +65,7 @@
   display: flex;
   align-items: center;
   justify-items: center;
-  margin-bottom: 45px;
+  margin-bottom: 10px;
 }
 
 .board-todo-tasks {
@@ -79,7 +80,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: background-color 0.2s ease;
 }
+
+.board-todo-tasks-active {
+  padding: 1px;
+  position: relative;
+  height: auto;
+  min-height: 190px;
+  width: 180px;
+  /* min-width: 160px; */
+  /* left: 7px; */
+  box-shadow: 0px 4px 12px rgba(66, 66, 66, 0.198454);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: lightblue;
+  transition: background-color 0.2s ease;
+}
+
+/* .task-list-active {
+  background-color: #4AC959; 
+} */
 
 .board-todo-task {
   font-family: 'Montserrat';
@@ -117,6 +139,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: background-color 0.2s ease;
+}
+
+.board-done-tasks-active {
+  padding: 1px;
+  position: relative;
+  height: auto;
+  min-height: 190px;
+  width: 180px;
+  /* min-width: 160px; */
+  /* left: 7px; */
+  box-shadow: 0px 4px 12px rgba(66, 66, 66, 0.198454);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: background-color 0.2s ease;
+  background-color: lightblue;
 }
 
 .top-border-done {
