--- a/src/pages/Slider/index.css
+++ b/src/pages/Slider/index.css
@@ -1,6 +1,6 @@
 .slider-wrapper {
   position: relative;
-  top: 690px;
+  top: 430px;
   left: 43px;
   max-width: 250px;
   gap: 10px;
@@ -10,13 +10,10 @@
   border-radius: 16px;
   box-shadow: 0px 4px 12px rgba(66, 66, 66, 0.198454);
   padding: 4px;
+  position: relative;
+  left: -20px;
 }
 
-/* .slick-slide {
-      margin: 0 27px;
-  }
-
-  /* the parent */
-  /* .slick-list {
-      margin: 0 -27px;
-  } */
+.slick-track {
+  overflow: hidden;
+}
