scrollintoview func add

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -36,3 +36,11 @@
   font-weight: 600;
   font-size: large;
 }
+
+/* @media screen and (min-width: 767px) {
+  .topo {
+    /* display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 15px;
+  } */
