--- a/src/components/BackgroundPanelSlider/index.css
+++ b/src/components/BackgroundPanelSlider/index.css
@@ -21,3 +21,28 @@ span {
   left: 40px;
   color: white;
 }
+
+@media screen and (min-width: 601px) {
+  .background-panel {
+    margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: auto;
+    height: 400px;
+    background-color: #4AC959;
+    position: inherit;
+    border-radius: 4px;
+    display: flex;
+    align-items: flex-start;
+    padding: 10px;
+  }
+  
+  span {
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 25px;
+    top: 660px;
+    left: 40px;
+    color: white;
+  }
+}
