--- a/src/components/LoginModal/index.css
+++ b/src/components/LoginModal/index.css
@@ -99,33 +99,12 @@
   color: black;
 }
 
-@media screen and (min-width: 767px) {
-  .modal {
-    position: fixed;
-    z-index: 40;
-    background-color: rgba(0,0,0,0.4);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-  }
-
+@media screen and (min-width: 601px) {
   .modal-content {
     max-width: 70%;
-    max-height: 70%;
-    height: 700px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    outline-width: none;
+    max-height: 50%;
     position: relative;
-    top: -100px;
-    width: 400px;
-    font-family: 'Montserrat';
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    left: 1%;
   }
   
   .modal-header {
@@ -136,44 +115,25 @@
   }
   
   .modal-header > h4 {
-    font-size: 45px;
+    font-size: 30px;
   }
   
   .modal-header > img {
-    height: 180px;
-    margin-bottom: -20px;
-  }
-  
-  .modal-subhead {
-    margin-top: -3px;
-    color: #4AC959;
-    font-weight: 400;
-    font-size: 35px;
+    height: 110px;
+    margin-bottom: -40px;
   }
   
   .modal-body {
-    font-family: 'Montserrat';
-    font-weight: 600;
-    font-size: 25px;
-    margin-top: -40px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    font-size: 18px;
+    margin-top: -60px;
   }
   
   .modal-body > label > input {
     border: 1px solid #959595;
     border-radius: 4px;
-    height: 40px;
+    height: 30px;
     margin-bottom: 5px;
     width: 210px;
-  }
-  
-  .modal-body > label {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
   }
   
   .signin-button { 
@@ -183,17 +143,18 @@
     font-size: larger;
     color: white;
     width: 200px;
-    height: 60px;
+    height: 40px;
     border: none;
+    margin-bottom: 4px;
   }
   
   .close-button {
     position: inherit;
-    left: 150px;
-    /* top: -10px; */
+    top: 10px;
+    left: 160px;
     font-family: 'Montserrat';
     font-weight: 600;
-    font-size: 20px;
+    font-size: 17px;
     color: black;
   }
 }
