--- a/src/pages/Contact/index.css
+++ b/src/pages/Contact/index.css
@@ -5,3 +5,14 @@
   flex-direction: column;
   align-items: center;
 }
+
+
+@media screen and (min-width: 601px) {
+  .contact-wrapper {
+    position: inherit;
+    margin-top: -210px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
