--- a/src/components/LoginModal/index.css
+++ b/src/components/LoginModal/index.css
@@ -101,8 +101,12 @@
 
 @media screen and (min-width: 601px) {
   .modal-content {
-    max-width: 70%;
-    max-height: 50%;
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    max-height: 80%;
+    width: 460px;
+    height: 400px;
     position: relative;
     left: 1%;
   }
@@ -124,6 +128,11 @@
   }
   
   .modal-body {
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
+
     font-size: 18px;
     margin-top: -60px;
   }
