--- a/src/components/LoginModal/index.css
+++ b/src/components/LoginModal/index.css
@@ -143,3 +143,48 @@
     font-size: 17px;
   }
 }
+
+@media screen and (min-width: 767px) {
+  .modal-content {
+    max-height: 70%;
+    width: 560px;
+    height: 700px;
+  }
+  
+  .modal-header > h4 {
+    font-size: 40px;
+  }
+  
+  .modal-header > img {
+    height: 150px;
+    margin-bottom: -40px;
+  }
+  
+  .modal-body {
+    display: flex;
+    flex-direction: column;
+    font-size: 22px;
+    margin-top: -60px;
+  }
+  
+  .modal-body > label > input {
+    height: 30px;
+    width: 210px;
+  }
+  
+  .signin-button { 
+    font-size: larger;
+    color: white;
+    width: 200px;
+    height: 40px;
+    margin-bottom: 4px;
+  }
+  
+  .close-button {
+    position: inherit;
+    top: -20px;
+    left: 220px;
+    font-weight: 600;
+    font-size: 18px;
+  }
+}
