--- a/src/components/Task/index.css
+++ b/src/components/Task/index.css
@@ -27,3 +27,9 @@
 .input-wrapper {
   margin-bottom: 4px;
 }
+
+@media screen and (min-width: 900px) {
+  .board-todo-task-text {
+    font-size: 19px;
+  }
+}
