--- a/src/components/BackgroundPanelSlider/index.css
+++ b/src/components/BackgroundPanelSlider/index.css
@@ -31,18 +31,16 @@ span {
     height: 400px;
     background-color: #4AC959;
     position: inherit;
-    border-radius: 4px;
-    display: flex;
-    align-items: flex-start;
     padding: 10px;
   }
   
   span {
-    font-family: 'Montserrat';
-    font-weight: 700;
     font-size: 25px;
-    top: 660px;
-    left: 40px;
-    color: white;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  span {
+    font-size: 35px;
   }
 }
