--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -37,10 +37,14 @@
   font-size: large;
 }
 
-/* @media screen and (min-width: 767px) {
+@media screen and (min-width: 900px) {
   .topo {
-    /* display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 15px;
-  } */
+    margin: 25px;
+  }
+  
+  .login-button {
+    height: 45px;
+    width: 140px;
+    z-index: 2;
+  }
+}
