--- a/src/pages/Slider/index.css
+++ b/src/pages/Slider/index.css
@@ -65,3 +65,13 @@
     left: -30px;
   }
 }
+
+@media screen and (min-width: 900px) {
+  .slider-wrapper {
+    max-width: 660px;
+  }
+
+  .slick-slide img {
+    height: 366px;
+  }
+}
