--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -48,3 +48,11 @@
     z-index: 2;
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .login-button {
+    height: 55px;
+    width: 170px;
+    z-index: 2;
+  }
+}
