--- a/src/components/LoginModal/index.css
+++ b/src/components/LoginModal/index.css
@@ -217,3 +217,37 @@
     font-size: 22px;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .modal-content {
+    max-height: 80%;
+    width: 560px;
+    height: 700px;
+  }
+  
+  .modal-header > h4 {
+    font-size: 45px;
+  }
+  
+  .modal-header > img {
+    height: 190px;
+    margin-bottom: -40px;
+  }
+
+  .modal-body > label > input {
+    height: 45px;
+  }
+  
+  .close-button {
+    position: inherit;
+    top: 10px;
+    left: 220px;
+    font-weight: 600;
+    font-size: 24px;
+  }
+
+  .signin-button {
+    width: 210px;
+    height: 50px;
+  }
+}
