--- a/src/components/SlideBackground/index.css
+++ b/src/components/SlideBackground/index.css
@@ -86,3 +86,31 @@
      z-index: 2;
    }
 }
+
+@media screen and (min-width: 1024px) {
+  .slide-background {
+    left: 435px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .slide-background {
+    position: absolute;
+    left: 606px;
+    top: 50px
+  }
+
+  .logo-background {
+    height: 540px;
+    width: 500px;
+    z-index: 1;
+   }
+   
+   .pic-background {
+     height: 380px;
+     width: 340px;
+     left: 92px;
+     top: 80px;
+     z-index: 2;
+   }
+}
