--- a/src/components/Task/index.css
+++ b/src/components/Task/index.css
@@ -33,3 +33,15 @@
     font-size: 19px;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .board-todo-task-text {
+    font-size: 22px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .board-todo-task-text {
+    font-size: 26px;
+  }
+}
