deskto css done

--- a/src/components/DragAndDrop/index.css
+++ b/src/components/DragAndDrop/index.css
@@ -332,3 +332,9 @@
     font-size: 30px;
   }  
 }
+
+@media screen and (min-width: 1680px) {
+  .wrapper-todo-board {
+    margin-top: 375px;
+  }
+}
