--- a/src/components/LoginModal/index.css
+++ b/src/components/LoginModal/index.css
@@ -15,10 +15,10 @@
 }
 
 .modal-content {
-  max-width: 70%;
-  max-height: 50%;
+  max-width: 90%;
+  max-height: 70%;
   height: 500px;
-  left: -53px;
+  /* left: -153px; */
   overflow-x: hidden;
   overflow-y: auto;
   outline-width: none;
@@ -224,7 +224,7 @@
     width: 560px;
     height: 700px;
   }
-  
+
   .modal-header > h4 {
     font-size: 45px;
   }
@@ -249,5 +249,15 @@
   .signin-button {
     width: 210px;
     height: 50px;
+  }
+}
+
+@media screen and (min-width: 1680px) {
+  .close-button {
+    position: inherit;
+    top: -30px;
+    left: 220px;
+    font-weight: 600;
+    font-size: 24px;
   }
 }
