--- a/src/components/LoginModal/index.css
+++ b/src/components/LoginModal/index.css
@@ -102,8 +102,8 @@
 
 @media screen and (min-width: 601px) {
   .modal-content {
-    width: 460px;
-    height: 400px;
+    width: 560px;
+    height: 500px;
     position: relative;
     left: 1%;
   }
@@ -118,6 +118,7 @@
   }
   
   .modal-body {
+    display: block;
     font-size: 18px;
     margin-top: -60px;
   }
@@ -137,8 +138,8 @@
   
   .close-button {
     position: inherit;
-    top: 10px;
-    left: 160px;
+    top: -40px;
+    left: 200px;
     font-weight: 600;
     font-size: 17px;
   }
