--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -5,6 +5,11 @@
   margin: 15px;
 }
 
+.button-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .logo {
   position: relative;
   display: flex;
@@ -35,6 +40,14 @@
   font-style: normal;
   font-weight: 600;
   font-size: large;
+  margin: 2px;
+}
+
+@media screen and (min-width: 601px){
+  .button-wrapper {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 @media screen and (min-width: 900px) {
