add task button

--- a/src/components/DragAndDrop/index.css
+++ b/src/components/DragAndDrop/index.css
@@ -39,6 +39,17 @@
   margin-bottom: 10px;
 }
 
+.add-btn {
+  height: 20px;
+  margin-top: 2px;
+  margin-bottom: 4px;
+  transition: transform .2s;
+}
+
+.add-btn:hover {
+  transform: scale(1.3);
+}
+
 .board-todo-tasks {
   padding: 1px;
   position: relative;
