--- a/src/components/Task/index.css
+++ b/src/components/Task/index.css
@@ -25,7 +25,55 @@
 }
 
 .input-wrapper {
+  max-width: 90%;
   margin-bottom: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform .2s;
+  padding: 4px;
+}
+
+/* .button-wrapper {
+  display: block;
+  align-items: center;
+  justify-content: center; 
+} */
+
+.update-btn {
+  display: none;
+  height: 20px;
+  margin-top: 2px;
+  margin-bottom: 4px;
+  transition: transform .2s;
+}
+
+.update-btn:hover {
+  transform: scale(1.3);
+}
+
+.delete-btn {
+  display: none;
+  height: 14px;
+  margin-top: 2px;
+  margin-bottom: 4px;
+  transition: transform .2s;
+}
+
+.delete-btn:hover {
+  transform: scale(1.3);
+}
+
+.input-wrapper:hover {
+  transform: scale(1.001);
+}
+
+.input-wrapper:hover > .button-wrapper > .delete-btn {
+  display: block;
+}
+
+.input-wrapper:hover > .button-wrapper > .update-btn {
+  display: block;
 }
 
 @media screen and (min-width: 900px) {
