--- a/src/components/EditTaskModal/index.css
+++ b/src/components/EditTaskModal/index.css
@@ -61,3 +61,21 @@
   font-weight: 600;
   color: black;
 }
+
+@media screen and (min-width: 1024px) {  
+  .edit-task-modal-content {
+    max-width: 90%;
+    max-height: 90%;
+    width: 40%;
+  }
+
+  .edit-task-modal-header > h4 {
+    font-size: 34px;
+  }
+  
+  .edit-task-modal-edit-button {
+    width: 60%;
+    height: 40px;
+    font-size: large;
+  }
+}
