--- a/src/components/RegisterModal/index.css
+++ b/src/components/RegisterModal/index.css
@@ -16,8 +16,8 @@
 
 .modal-content {
   max-width: 90%;
-  max-height: 70%;
-  height: 500px;
+  /* max-height: 100%; */
+  height: 600px;
   /* left: -153px; */
   overflow-x: hidden;
   overflow-y: auto;
@@ -103,7 +103,7 @@
 @media screen and (min-width: 601px) {
   .modal-content {
     width: 560px;
-    height: 500px;
+    height: 600px;
     position: relative;
     left: 1%;
   }
@@ -147,9 +147,9 @@
 
 @media screen and (min-width: 767px) {
   .modal-content {
-    max-height: 70%;
+    max-height: 80%;
     width: 560px;
-    height: 700px;
+    height: 730px;
   }
   
   .modal-header > h4 {
@@ -192,9 +192,9 @@
 
 @media screen and (min-width: 900px) {
   .modal-content {
-    max-height: 70%;
+    /* max-height: 80%; */
     width: 560px;
-    height: 700px;
+    height: 730px;
   }
   
   .modal-header > h4 {
@@ -221,9 +221,9 @@
 
 @media screen and (min-width: 1024px) {
   .modal-content {
-    max-height: 80%;
+    max-height: 100%;
     width: 560px;
-    height: 700px;
+    height: auto
   }
 
   .modal-header > h4 {
@@ -255,9 +255,9 @@
 
 @media screen and (min-width: 1680px) {
   .close-button {
-    position: inherit;
-    top: -30px;
-    left: 220px;
+    /* position: inherit; */
+    /* top: -100px; */
+    /* left: 220px; */
     font-weight: 600;
     font-size: 24px;
   }
