--- a/src/components/Task/index.css
+++ b/src/components/Task/index.css
@@ -21,7 +21,7 @@
   text-align: start;
   padding: 4px 1px;
   margin: 2px;
-  max-width: 150px;
+  max-width: 100%;
 }
 
 .input-wrapper {
@@ -86,10 +86,28 @@
   .board-todo-task-text {
     font-size: 22px;
   }
+
+  .update-btn {
+    height: 30px;
+  }
+
+  .delete-btn {
+    height: 24px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .board-todo-task-text {
     font-size: 26px;
+  }
+}
+
+@media screen and(min-width: 1680px) {
+  .update-btn {
+    height: 40px;
+  }
+
+  .delete-btn {
+    height: 34px;
   }
 }
