--- a/src/components/LoginModal/index.css
+++ b/src/components/LoginModal/index.css
@@ -14,11 +14,10 @@
   justify-content: center;
 }
 
-.modal-content {
+.modal-content-login {
   max-width: 90%;
   max-height: 70%;
   height: 500px;
-  /* left: -153px; */
   overflow-x: hidden;
   overflow-y: auto;
   outline-width: none;
@@ -101,7 +100,7 @@
 }
 
 @media screen and (min-width: 601px) {
-  .modal-content {
+  .modal-content-login {
     width: 560px;
     height: 500px;
     position: relative;
@@ -146,7 +145,7 @@
 }
 
 @media screen and (min-width: 767px) {
-  .modal-content {
+  .modal-content-login {
     max-height: 70%;
     width: 560px;
     height: 700px;
@@ -191,7 +190,7 @@
 }
 
 @media screen and (min-width: 900px) {
-  .modal-content {
+  .modal-content-login {
     max-height: 70%;
     width: 560px;
     height: 700px;
@@ -220,7 +219,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .modal-content {
+  .modal-content-login {
     max-height: 80%;
     width: 560px;
     height: 700px;
